--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,4 +16,4 @@ jobs:
     - run: npm test
       env:
         CI: true
-        NEWS_KEY: ${{secrets.NEWS_KEY}}
+        REACT_APP_NEWS_KEY: ${{secrets.REACT_APP_NEWS_KEY}}
